--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-OPENAI_API_KEY=
-UPLOADTHING_TOKEN=
+# OpenAI API key for AI-powered writing assistance
+# Get one at: https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# UploadThing API key for file uploads  
+# Get one at: https://uploadthing.com/dashboard
+UPLOADTHING_TOKEN=your_uploadthing_token_here
